force-app/main/default/objects/Car__c/fields/Car_Availability__c.field-meta.xml
<CustomField>
    <fullName>Car_Availability__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Car Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>