force-app/main/default/objects/Car__c/fields/Electric__c.field-meta.xml
<CustomField>
    <fullName>Electric__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Electric</label>
    <type>Checkbox</type>
</CustomField>