force-app/main/default/objects/Car__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>