force-app/main/default/objects/Car__c/fields/Model_price__c.field-meta.xml
<CustomField>
    <fullName>Model_price__c</fullName>
    <formula>Model__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>