force-app/main/default/objects/Car__c/fields/Number_of_doors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_doors__c</fullName>
    <label>Number of doors</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>