force-app/main/default/objects/Car__c/fields/Sale_price__c.field-meta.xml
<CustomField>
    <fullName>Sale_price__c</fullName>
    <label>Sale price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>