force-app/main/default/objects/Car__c/fields/Seller_custom__c.field-meta.xml
<CustomField>
    <fullName>Seller_custom__c</fullName>
    <label>Seller_custom</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>