force-app/main/default/objects/Car__c/validationRules/Sale_price_lesser_than_actual.validationRule-meta.xml
<ValidationRule>
    <fullName>Sale_price_lesser_than_actual</fullName>
    <active>true</active>
    <errorConditionFormula>Sale_price__c &gt; Model_price__c</errorConditionFormula>
    <errorMessage>The sale&apos;s price must be lesser than the actual price</errorMessage>
</ValidationRule>